[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/botao-1.png" type="Texture" id=1]
[ext_resource path="res://scripts/KinematicBody2D.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 36.0464

[sub_resource type="CircleShape2D" id=2]
radius = 35.8761

[node name="Jogador" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionArea" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
visible = false
shape = SubResource( 1 )

[node name="CollisionJogador" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 2 )
[connection signal="area_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_area_entered"]
[connection signal="input_event" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_mouse_entered"]
